test: Add jvm args to the test worker per robolectric documentation.
https://robolectric.org/getting-started/