@@ -180,6 +180,16 @@ android {
                     "--add-exports=java.desktop/sun.swing=ALL-UNNAMED",
                     "--add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
                      */
+                    // https://robolectric.org/getting-started/
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.io=ALL-UNNAMED",
+                    "--add-opens=java.base/java.net=ALL-UNNAMED",
+                    "--add-opens=java.base/java.security=ALL-UNNAMED",
+                    "--add-opens=java.base/java.text=ALL-UNNAMED",
+                    "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                    "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                 )
             }
             isIncludeAndroidResources = true
